{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "0bc1a067-4887-40ee-887a-0fae9c3c8d32",
            "actions": [
                {
                    "name": "Walking",
                    "type": "Value",
                    "id": "e05f1375-9f3a-4d35-b42c-97f5e7fe375b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dodging",
                    "type": "Button",
                    "id": "3fd4e0f4-85e0-43d8-b213-58e8aec3e95f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b18b4fd8-3167-4f8c-9703-9566002b9de0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "26b2b191-9aea-4b7d-9df0-4c226af91916",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walking",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c879e5bb-a313-4896-bf03-a9ae025143e9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walking",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a5f91744-899c-42e0-b384-e55ec2ab4488",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walking",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5e8e4137-2672-4b9f-a434-063294048d5d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walking",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "97128a0f-e93f-4ce1-953e-0e37d6594971",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walking",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "54a1faea-fd04-4d8e-b504-8f6e3891fe32",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodging",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32e7686a-4ec9-4f54-82a0-467258a06556",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "c9e433cc-7f84-4548-833d-5157a592895e",
            "actions": [
                {
                    "name": "Ability",
                    "type": "Button",
                    "id": "d2f70d9b-1e95-42b5-82ad-2656fb749789",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponArt",
                    "type": "Button",
                    "id": "b77d0c8d-2e00-4135-a572-e9cb9dc567d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "9ffec3ad-e2a9-4abd-80d6-e5f737fa4940",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NormalAttack",
                    "type": "Button",
                    "id": "0c306810-4cd7-4893-a961-881951b7e94c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookDir",
                    "type": "Value",
                    "id": "9a8c739c-d282-4055-b4c5-51f373bb817c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8108a61e-b1b7-4d05-a003-f6dc301e6a2f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NormalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "288abfcd-5d1d-47f3-adb2-7573945d29ef",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfa466e3-75bc-44e5-b5a7-76f8b071e47e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponArt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18043223-2fd1-4292-b3a5-70743966cebc",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e2ad5dcc-9cae-4ab0-862a-10a9a27a68ad",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDir",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5333a494-7608-49c6-87b0-8de82b504e5d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f99560e6-c585-47f8-9912-1896e298ec7d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f07caa37-969b-4c48-be90-78c8a7de1124",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e7f06aef-4663-40a2-83b5-94ecd6e72795",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDir",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}